# Forge2D

./: .gitignore  CMakeLists.txt  README.md  package.bat
examples/platformer/: PlatformerScene.cpp  PlatformerScene.h  main.cpp
src/: GameScene.cpp  GameScene.h  main.cpp
src/core/: AssetManager.cpp  AssetManager.h  Audio.cpp  Audio.h  Entity.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScriptEngine.cpp  ScriptEngine.h  Window.cpp  Window.h
src/editor/: Editor.cpp  Editor.h
src/renderer/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
